cluster/apps/ghost/05-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-ghost-k8s
  namespace: ghost-k8s
  labels:
    app: mysql-ghost-k8s
    app.kubernetes.io/name: mysql-ghost-k8s
    app.kubernetes.io/instance: ghost-k8s
    app.kubernetes.io/version: "5.92"
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: ghost-k8s
spec:
  serviceName: service-mysql-ghost-k8s
  replicas: 1
  selector:
    matchLabels:
      app: mysql-ghost-k8s
  template:
    metadata:
      labels:
        app: mysql-ghost-k8s
        app.kubernetes.io/name: mysql-ghost-k8s
      # annotations:
        # container.apparmor.security.beta.kubernetes.io/mysql-ghost-k8s: runtime/default
    spec:
      containers:
      - name: mysql-ghost-k8s
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534

        image: docker.io/mysql:26.7
        imagePullPolicy: Always # You can change this value according to your needs
        resources:
          requests:
            memory: 400Mi
            cpu: 300m
          limits:
            memory: 1Gi # You can change this value according to your needs
            cpu: 1000m # You can change this value according to your needs
        ports:
        - containerPort: 3306
          protocol: TCP
          name: mysqlgh
        volumeMounts:
        - name: mysql-ghost-k8s-volume
          mountPath: /var/lib/mysql
          subPath: mysql-empty-dir
          readOnly: false

        - name: mysql-ghost-k8s-tmp
          mountPath: /tmp
          readOnly: false

        - name: mysql-ghost-k8s-socket
          mountPath: /var/run/mysqld
          readOnly: false
      automountServiceAccountToken: false

      # Optional: Uncomment the following to specify node selectors
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: static
      #               operator: In
      #               values:
      #                 - "true"

      securityContext:
        seccompProfile:
          type: RuntimeDefault

      volumes:
      - name: mysql-ghost-k8s-volume
        persistentVolumeClaim:
          claimName: mysql-ghost-k8s
      - name: mysql-ghost-k8s-tmp
        emptyDir:
          sizeLimit: 128Mi
      - name: mysql-ghost-k8s-socket
        emptyDir:
          sizeLimit: 128Mi
