cluster/apps/ghost/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-k8s-ingress
  namespace: ghost-k8s
  annotations:
    kubernetes.io/ingress.class: "external"
    gethomepage.dev/description: Gustend Blog
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Personal
    gethomepage.dev/icon: sh-ghost
    gethomepage.dev/name: Gustend Blog
    gethomepage.dev/pod-selector: app.kubernetes.io/name=ghost-k8s
  labels:
    app: ghost-k8s
    app.kubernetes.io/name: ghost-k8s
    app.kubernetes.io/instance: ghost-k8s
    app.kubernetes.io/version: "5.92"
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: ghost-k8s
spec:
  ingressClassName: external # Or your ingress controller 
  rules:
  - host: blog.gustend.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-ghost-k8s
            port:
              number: 2368
