cluster/apps/ghost/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ghost-k8s
  namespace: ghost-k8s
  annotations:
    gethomepage.dev/description: Gustend Blog
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Personal
    gethomepage.dev/icon: sh-ghost
    gethomepage.dev/name: Gustend Blog
    gethomepage.dev/pod-selector: app.kubernetes.io/name=ghost-k8s
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
      namespace: envoy-gateway
  hostnames:
    - blog.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: service-ghost-k8s
          port: 2368
          weight: 1
